<resources>
    <string name="app_name">代步巴士</string>
    <string name="map_key">3ca4848fe7a3cbdca26ba7b7fbd1d990</string>


    <string name="back">返回</string>
    <string name="username_hint">请输入账号</string>
    <string name="login">登录</string>
    <string name="no_have_user">还没有账号？</string>
    <string name="click_register">点击注册</string>
    <string name="my_order">我的订单</string>
    <string name="my_line">线路管理</string>
    <string name="my_agreement">使用协议</string>
    <string name="my_about">关于我们</string>
    <string name="share">分享</string>
    <string name="share_content">好的东西就要分享给朋友</string>
    <string name="edit_login">退出当前账号</string>
    <string name="online_duration">在线时长</string>
    <string name="order_num">接单数</string>
    <array name="share_items">
        <item>QQ空间</item>
        <item>QQ好友</item>
        <item>微信好友</item>
        <item>微信朋友圈</item>
    </array>
    <string name="no_network_hint">当前无网络</string>
    <string name="request_error">请求异常</string>
    <string name="register_message_fill">注册信息填写</string>
    <string name="up_car">上车</string>
    <string name="down_car">下车</string>
    <string name="book_passenger">预约乘客</string>
    <string name="system_message">系统消息</string>
    <string name="set_line">线路设置</string>
    <string name="add_line">新增线路</string>
    <string name="out_bound_time">出站时间</string>
    <string name="please_select_out_bound_time">请选择出站时间</string>
    <string name="all_line">整体线路</string>
    <string name="start_address">起点</string>
    <string name="end_address">终点</string>
    <string name="add_line_address">点击添加途径点</string>
    <string name="save">保存</string>
    <string name="please_select_address">请选择地址</string>
    <string name="wait_up_car">等待上车</string>
    <string name="trip_ing">行程中</string>
    <string name="order_over">已完成</string>
    <string name="order_cancel">订单取消</string>
    <string name="pick_up_passengers">去接乘客</string>
    <array name="line_city">
        <item>QQ空间</item>
        <item>QQ好友</item>
        <!--<item>微信好友</item>-->
        <!--<item>微信朋友圈</item>-->
        <!--<item>成都</item>-->
        <!--<item>北京</item>-->
    </array>
</resources>
