<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_210"
        android:background="@color/login_logo_background"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_58"
            android:src="@mipmap/logo"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginBottom="@dimen/dp_11"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_31"
            android:gravity="center_vertical"
            android:src="@mipmap/login_phone"
            />

        <EditText
            android:id="@+id/username_txt"
            android:layout_marginTop="@dimen/dp_28"
            android:layout_marginLeft="@dimen/dp_22"
            android:layout_marginRight="@dimen/dp_25"
            style="@style/edit_phone_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        style="@style/horizontalLine_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_31"
            android:gravity="center_vertical"
            android:src="@mipmap/login_phone"
            />

        <EditText
            android:id="@+id/pass_word_txt"
            android:layout_marginTop="@dimen/dp_28"
            android:layout_marginLeft="@dimen/dp_22"
            android:layout_marginRight="@dimen/dp_25"
            style="@style/edit_phone_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        style="@style/horizontalLine_style" />

    <TextView
        android:id="@+id/btnLogin"
        style="@style/button_style"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_150"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_have_user"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/no_have_user_color"
            />
        <TextView
            android:id="@+id/user_click_register_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_register"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/click_register_color"
            />
    </LinearLayout>

</LinearLayout>
